Question controller test
